Please enter the commit message for your changes. Lines starting   with ' ' will be ignored, and an empty message aborts the commit.
  On branch main
  Your branch is up to date with 'origin/main'.

  Changes to be committed:
 	modified:   .vscode/launch.json
 	new file:   Readme.md
 	new file:   Test/Ruin_test.ins2D
 	new file:   Test/Ruin_test.ins2D.html
 	new file:   Test/Sol_test.ins2D
 	new file:   Test/Sol_test.ins2D.html
 	modified:   header.h
 	modified:   main.cpp
 	modified:   result.csv
 	modified:   test.cpp
 	modified:   test.ins2D

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
-            "args": ["CLASS/cl_10_100_09.ins2D"],
+            "args": ["test.ins2D"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
